added search menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="source">Source</string>
     <string name="time">Time</string>
     <string name="top_headlines">Top HeadLines</string>
+    <string name="settings">Settings</string>
+    <string name="search">Search</string>
 </resources>
