--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="retry">Retry</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="label_menu_1">list</string>
+    <string name="label_menu_2">filter</string>
+    <string name="label_menu_3">sort</string>
+    <string name="label_menu_4">settings</string>
 </resources>
