--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,10 +18,8 @@
     <string name="error_message">Error Message</string>
     <string name="img_error">img error</string>
     <string name="retry">Retry</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="label_menu_1">list</string>
+    <string name="label_menu_1">list news</string>
     <string name="label_menu_2">filter</string>
-    <string name="label_menu_3">save</string>
-    <string name="label_menu_4">settings</string>
+    <string name="label_menu_3">saved pages</string>
+    <string name="label_menu_4">presets</string>
 </resources>
